# so-lab2

zad1/: CMakeLists.txt  tests.sh  wyniki.txt
zad1/include/: liboperations.h  sysoperations.h
zad1/src/: liboperations.c  main.c  sysoperations.c
zad2/: CMakeLists.txt  main.c
zad3/: CMakeLists.txt  main.c
